fix(book_list): align cover sizes
Fixed (hopefully) an issue where covers in the book_list would be of
different sizes.

--- a/static/css/tailwind.css
+++ b/static/css/tailwind.css
@@ -58,7 +58,6 @@
     --font-weight-extrabold: 800;
     --tracking-wide: 0.025em;
     --leading-relaxed: 1.625;
-    --radius-sm: 0.25rem;
     --radius-md: 0.375rem;
     --radius-lg: 0.5rem;
     --radius-xl: 0.75rem;
@@ -310,6 +309,9 @@
   .inline-block {
     display: inline-block;
   }
+  .aspect-3\/4 {
+    aspect-ratio: 3/4;
+  }
   .h-8 {
     height: calc(var(--spacing) * 8);
   }
@@ -327,6 +329,9 @@
   }
   .max-h-128 {
     max-height: calc(var(--spacing) * 128);
+  }
+  .min-h-10 {
+    min-height: calc(var(--spacing) * 10);
   }
   .min-h-full {
     min-height: 100%;
@@ -502,9 +507,6 @@
   }
   .rounded-md {
     border-radius: var(--radius-md);
-  }
-  .rounded-sm {
-    border-radius: var(--radius-sm);
   }
   .rounded-xl {
     border-radius: var(--radius-xl);
@@ -873,6 +875,13 @@
       }
     }
   }
+  .hover\:text-blue-600 {
+    &:hover {
+      @media (hover: hover) {
+        color: var(--color-blue-600);
+      }
+    }
+  }
   .hover\:text-blue-800 {
     &:hover {
       @media (hover: hover) {
@@ -891,6 +900,14 @@
     &:hover {
       @media (hover: hover) {
         text-decoration-line: underline;
+      }
+    }
+  }
+  .hover\:shadow-2xl {
+    &:hover {
+      @media (hover: hover) {
+        --tw-shadow: 0 25px 50px -12px var(--tw-shadow-color, rgb(0 0 0 / 0.25));
+        box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
       }
     }
   }
